--- a/Admin_Kiosk3_Backend/auth_service/requirements.txt
+++ b/Admin_Kiosk3_Backend/auth_service/requirements.txt
@@ -1,5 +1,32 @@
+# Base Flask y extensiones
 Flask==2.0.1
+Werkzeug==2.0.3
 Flask-SQLAlchemy==2.5.1
-Flask-JWT-Extended==4.3.1
-psycopg2-binary==2.9.1
-Werkzeug==2.0.1 
+Flask-JWT-Extended==4.4.4
+Flask-Migrate==3.1.0
+
+# Base de datos
+SQLAlchemy>=1.4.46,<2.0.0
+psycopg2-binary==2.9.9
+alembic>=1.12.0
+
+# Seguridad
+cryptography>=41.0.0
+PyJWT==2.3.0
+
+# Utilidades
+python-dotenv==0.19.2
+structlog>=23.1.0
+
+# Servidor WSGI
+gunicorn>=20.1.0
+gevent>=21.12.0
+
+# Testing
+pytest>=7.4.3
+pytest-cov>=2.12.1
+pytest-flask>=1.2.0
+
+# Dependencias específicas para auth_service
+bcrypt==4.0.1
+email-validator==1.1.3 
